fix: update API base URL and development port in environment configuration; add allowed hosts in Vite config

--- a/.env
+++ b/.env
@@ -1,10 +1,9 @@
 # URL สำหรับเชื่อมต่อกับ Backend (Node.js)
-VITE_API_BASE_URL=http://localhost:3001/
-# VITE_API_BASE_URL=http://localhost:3001
+VITE_API_BASE_URL=http://localhost:36145
 
 # Dev server host/port for Vite
 VITE_DEV_HOST=localhost
-VITE_DEV_PORT=5173
+VITE_DEV_PORT=36144
 
 # App Version
 VITE_APP_VERSION=v3.0
