fix: update API URLs to point to the new development server

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # URL สำหรับเชื่อมต่อกับ Backend (Node.js)
-VITE_API_BASE_URL=http://localhost:36145
+VITE_API_BASE_URL=http://project.3bbddns.com:36145
 
 # Dev server host/port for Vite
-VITE_DEV_HOST=localhost
+VITE_DEV_HOST=project.3bbddns.com
 VITE_DEV_PORT=36146
 
 # App Version
