--- a/.env
+++ b/.env
@@ -21,3 +21,9 @@ VITE_SNOW_OPACITY=0.7
 
 
 VITE_BOT_TYPING_SPEED=15
+
+# Auto open chatbot on load (true = เปิดอัตโนมัติ, false = ปิด)
+VITE_AUTO_OPEN_CHATBOT=true
+
+# Z-index for snowflakes effect (default: 1000)
+VITE_SNOW_Z_INDEX=1000
