--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/aos": "^3.0.7",
     "@vitejs/plugin-vue": "^6.0.1",
+    "terser": "^5.44.1",
     "vite": "^7.1.11",
     "vite-plugin-vue-devtools": "^8.0.3"
   }
