--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ VITE_SNOW_MAX_DURATION=25
 VITE_SNOW_OPACITY=0.7
 
 
-VITE_BOT_TYPING_SPEED=15
+VITE_BOT_TYPING_SPEED=5
 
 # Auto open chatbot on load (true = เปิดอัตโนมัติ, false = ปิด)
 VITE_AUTO_OPEN_CHATBOT=true
