fix: update development host and port configuration for consistency

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 VITE_API_BASE_URL=http://project.3bbddns.com:36145
 
 # Dev server host/port for Vite
-VITE_DEV_HOST=project.3bbddns.com
+VITE_DEV_HOST=0.0.0.0
 VITE_DEV_PORT=36144
 
 # App Version
