fix: enhance typing delay configuration and add help button for user assistance

--- a/.env
+++ b/.env
@@ -20,7 +20,11 @@ VITE_SNOW_MAX_DURATION=25
 VITE_SNOW_OPACITY=0.7
 
 
-VITE_BOT_TYPING_SPEED=5
+# Typing delay per character in milliseconds (smaller -> faster typing). Use an integer (e.g. 6).
+# If both variables are present, VITE_BOT_TYPING_DELAY_MS takes precedence.
+VITE_BOT_TYPING_DELAY_MS=0
+# Legacy name for compatibility (kept for backward compatibility; value ignored when VITE_BOT_TYPING_DELAY_MS is set)
+VITE_BOT_TYPING_SPEED=2
 
 # Auto open chatbot on load (true = เปิดอัตโนมัติ, false = ปิด)
 VITE_AUTO_OPEN_CHATBOT=true
