fix: add minimal typing indicator duration configuration and update typing logic

--- a/.env
+++ b/.env
@@ -23,6 +23,8 @@ VITE_SNOW_OPACITY=0.7
 # Typing delay per character in milliseconds (smaller -> faster typing). Use an integer (e.g. 6).
 # If both variables are present, VITE_BOT_TYPING_DELAY_MS takes precedence.
 VITE_BOT_TYPING_DELAY_MS=0
+# Minimal typing indicator duration in milliseconds (set to 0 to disable). Example: 120
+VITE_BOT_TYPING_INDICATOR_MS=120
 # Legacy name for compatibility (kept for backward compatibility; value ignored when VITE_BOT_TYPING_DELAY_MS is set)
 VITE_BOT_TYPING_SPEED=2
 
