--- a/.env
+++ b/.env
@@ -12,11 +12,11 @@ VITE_APP_VERSION=v1.0
 VITE_BOT_SLEEP_TIMEOUT=15000
 
 # Snow Configuration
-VITE_SNOW_COUNT=30
+VITE_SNOW_COUNT=20
 VITE_SNOW_MIN_SIZE=0.4
-VITE_SNOW_MAX_SIZE=1.4
+VITE_SNOW_MAX_SIZE=2.8
 VITE_SNOW_MIN_DURATION=10
-VITE_SNOW_MAX_DURATION=30
+VITE_SNOW_MAX_DURATION=20
 VITE_SNOW_OPACITY=1
 
 
@@ -32,4 +32,4 @@ VITE_BOT_TYPING_SPEED=2
 VITE_AUTO_OPEN_CHATBOT=true
 
 # Z-index for snowflakes effect (default: 1000)
-VITE_SNOW_Z_INDEX=1000
+VITE_SNOW_Z_INDEX=0`
