feat: update environment configuration and adjust chat panel height for improved UI

--- a/.env
+++ b/.env
@@ -33,3 +33,7 @@ VITE_AUTO_OPEN_CHATBOT=true
 
 # Z-index for snowflakes effect (default: 1000)
 VITE_SNOW_Z_INDEX=0`
+
+
+#เริ่ม server แบบ background (ผมเพิ่มสคริปต์ให้แล้ว)
+#npm run bg:preview
