--- a/.env
+++ b/.env
@@ -37,3 +37,11 @@ VITE_SNOW_Z_INDEX=0`
 
 #เริ่ม server แบบ background (ผมเพิ่มสคริปต์ให้แล้ว)
 #npm run bg:preview
+
+
+
+# lsof -iTCP:36144 -sTCP:LISTEN -n -P
+
+
+
+# nohup npm run dev > dev.log 2>&1 & echo $! > dev.pid
