feat: update snow configuration for enhanced visual effects and adjust chatbot message bubble styling

--- a/.env
+++ b/.env
@@ -12,12 +12,13 @@ VITE_APP_VERSION=v1.0
 VITE_BOT_SLEEP_TIMEOUT=15000
 
 # Snow Configuration
-VITE_SNOW_COUNT=20
-VITE_SNOW_MIN_SIZE=0.4
-VITE_SNOW_MAX_SIZE=1.8
-VITE_SNOW_MIN_DURATION=10
-VITE_SNOW_MAX_DURATION=20
-VITE_SNOW_OPACITY=1
+
+VITE_SNOW_COUNT=80              #จำนวนเกล็ดหิมะทั้งหมดที่จะปรากฏบนหน้าจอพร้อมกัน
+VITE_SNOW_MIN_SIZE=0.4          #ขนาดเล็กที่สุดที่เป็นไปได้ของเกล็ดหิมะ
+VITE_SNOW_MAX_SIZE=2.3          #ขนาดใหญ่ที่สุดที่เป็นไปได้ของเกล็ดหิมะ
+VITE_SNOW_MIN_DURATION=15       #ระยะเวลาสั้นที่สุดที่เกล็ดหิมะจะตกจากด้านบนไปด้านล่างของหน้าจอ (วินาที)
+VITE_SNOW_MAX_DURATION=30       #ระยะเวลายาวที่สุดที่เกล็ดหิมะจะตกจากด้านบนไปด้านล่างของหน้าจอ (วินาที)
+VITE_SNOW_OPACITY=1             #ความทึบของเกล็ดหิมะ (0 = โปร่งใส, 1 = ทึบ)
 
 
 # Typing delay per character in milliseconds (smaller -> faster typing). Use an integer (e.g. 6).
