feat: add concurrently package for improved development workflow

--- a/.env
+++ b/.env
@@ -36,13 +36,13 @@ VITE_AUTO_OPEN_CHATBOT=true
 VITE_SNOW_Z_INDEX=0`
 
 
-#เริ่ม server แบบ background (ผมเพิ่มสคริปต์ให้แล้ว)
-#npm run bg:preview
+
+#  cd /path/to/PCRU-CHATBOT-FRONTEND-1
+#  npm run build
+#  # เสิร์ฟด้วย serve
+#  npx serve -s dist -l 36144
 
 
 
-# lsof -iTCP:36144 -sTCP:LISTEN -n -P
-
-
-
-# nohup npm run dev > dev.log 2>&1 & echo $! > dev.pid
+# npm install --save-dev concurrently
+# npx concurrently "cd /path/to/PCRU-CHATBOT-FRONTEND-1 && npm run dev" "cd /path/to/pcru-chatbot-backend-1 && npm run dev"
