--- a/.env
+++ b/.env
@@ -13,11 +13,11 @@ VITE_BOT_SLEEP_TIMEOUT=15000
 
 # Snow Configuration
 
-VITE_SNOW_COUNT=80              #จำนวนเกล็ดหิมะทั้งหมดที่จะปรากฏบนหน้าจอพร้อมกัน
+VITE_SNOW_COUNT=7             #จำนวนเกล็ดหิมะทั้งหมดที่จะปรากฏบนหน้าจอพร้อมกัน
 VITE_SNOW_MIN_SIZE=0.4          #ขนาดเล็กที่สุดที่เป็นไปได้ของเกล็ดหิมะ
-VITE_SNOW_MAX_SIZE=2.3          #ขนาดใหญ่ที่สุดที่เป็นไปได้ของเกล็ดหิมะ
-VITE_SNOW_MIN_DURATION=15       #ระยะเวลาสั้นที่สุดที่เกล็ดหิมะจะตกจากด้านบนไปด้านล่างของหน้าจอ (วินาที)
-VITE_SNOW_MAX_DURATION=30       #ระยะเวลายาวที่สุดที่เกล็ดหิมะจะตกจากด้านบนไปด้านล่างของหน้าจอ (วินาที)
+VITE_SNOW_MAX_SIZE=1.8          #ขนาดใหญ่ที่สุดที่เป็นไปได้ของเกล็ดหิมะ
+VITE_SNOW_MIN_DURATION=20       #ระยะเวลาสั้นที่สุดที่เกล็ดหิมะจะตกจากด้านบนไปด้านล่างของหน้าจอ (วินาที)
+VITE_SNOW_MAX_DURATION=40       #ระยะเวลายาวที่สุดที่เกล็ดหิมะจะตกจากด้านบนไปด้านล่างของหน้าจอ (วินาที)
 VITE_SNOW_OPACITY=1             #ความทึบของเกล็ดหิมะ (0 = โปร่งใส, 1 = ทึบ)
 
 
@@ -33,7 +33,7 @@ VITE_BOT_TYPING_SPEED=1
 VITE_AUTO_OPEN_CHATBOT=true
 
 # Z-index for snowflakes effect (default: 1000)
-VITE_SNOW_Z_INDEX=0`
+VITE_SNOW_Z_INDEX=0
 
 
 
