--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^3.9.1",
+    "leaflet": "^1.9.4",
     "sweetalert2": "^11.26.10",
     "vue": "^3.5.22",
     "vue-chart-3": "^3.1.8",
