--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/aos": "^3.0.7",
     "@vitejs/plugin-vue": "^6.0.1",
     "concurrently": "^9.2.1",
+    "nodemon": "^3.1.11",
     "terser": "^5.44.1",
     "vite": "^7.1.11",
     "vite-plugin-vue-devtools": "^8.0.3"
