fix: change backend URL to Vercel deployment

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 # URL สำหรับเชื่อมต่อกับ Backend (Node.js)
-VITE_API_BASE_URL=http://project.3bbddns.com:36145
+# Production: Use Vercel deployment
+VITE_API_BASE_URL=https://pcru-chatbot-backend-tau.vercel.app
+# Local development fallback
+VITE_API_BASE_URL_LOCAL=http://project.3bbddns.com:36145
 
 # Dev server host/port for Vite
 VITE_DEV_HOST=0.0.0.0
