fix: ensure Vercel uses correct backend URL

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # Production: Use Vercel deployment
 VITE_API_BASE_URL=https://pcru-chatbot-backend-tau.vercel.app
 # Local development fallback
-#VITE_API_BASE_URL_LOCAL=http://project.3bbddns.com:36145
+VITE_API_BASE_URL_LOCAL=http://project.3bbddns.com:36145
 
 # Dev server host/port for Vite
 VITE_DEV_HOST=0.0.0.0
