--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # URL สำหรับเชื่อมต่อกับ Backend (Node.js)
 # Production: Use Vercel deployment
-VITE_API_BASE_URL=https://pcru-chatbot-backend-tau.vercel.app
+# VITE_API_BASE_URL=https://pcru-chatbot-backend-tau.vercel.app
+VITE_API_BASE_URL=http://project.3bbddns.com:36145
 
 # Dev server host/port for Vite
 VITE_DEV_HOST=0.0.0.0
