feat: integrate Google OAuth for login and account management

--- a/.env
+++ b/.env
@@ -34,6 +34,10 @@ VITE_BOT_TYPING_SPEED=3
 # Auto open chatbot on load (true = เปิดอัตโนมัติ, false = ปิด)
 VITE_AUTO_OPEN_CHATBOT=true
 
+# --- Google OAuth Configuration ---
+# Google Client ID สำหรับ OAuth2 Login (ได้จาก Google Cloud Console)
+VITE_GOOGLE_OAUTH_CLIENT_ID=361402205480-6bghd1l8kjee4383hf1fhf7dert8cc05.apps.googleusercontent.com
+
 # Z-index for snowflakes effect (default: 1000)
 VITE_SNOW_Z_INDEX=0
 
