feat: Add floating orbs and colorful particles effects with configurable properties

--- a/.env
+++ b/.env
@@ -16,8 +16,8 @@ VITE_BOT_SLEEP_TIMEOUT=15000
 # Snow Configuration
 
 VITE_SNOW_COUNT=10             #จำนวนเกล็ดหิมะทั้งหมดที่จะปรากฏบนหน้าจอพร้อมกัน
-VITE_SNOW_MIN_SIZE=3.4          #ขนาดเล็กที่สุดที่เป็นไปได้ของเกล็ดหิมะ
-VITE_SNOW_MAX_SIZE=12.8          #ขนาดใหญ่ที่สุดที่เป็นไปได้ของเกล็ดหิมะ
+VITE_SNOW_MIN_SIZE=1.4          #ขนาดเล็กที่สุดที่เป็นไปได้ของเกล็ดหิมะ
+VITE_SNOW_MAX_SIZE=7.8          #ขนาดใหญ่ที่สุดที่เป็นไปได้ของเกล็ดหิมะ
 VITE_SNOW_MIN_DURATION=20       #ระยะเวลาสั้นที่สุดที่เกล็ดหิมะจะตกจากด้านบนไปด้านล่างของหน้าจอ (วินาที)
 VITE_SNOW_MAX_DURATION=40       #ระยะเวลายาวที่สุดที่เกล็ดหิมะจะตกจากด้านบนไปด้านล่างของหน้าจอ (วินาที)
 VITE_SNOW_OPACITY=1             #ความทึบของเกล็ดหิมะ (0 = โปร่งใส, 1 = ทึบ)
@@ -41,6 +41,13 @@ VITE_GOOGLE_OAUTH_CLIENT_ID=361402205480-6bghd1l8kjee4383hf1fhf7dert8cc05.apps.g
 # Z-index for snowflakes effect (default: 1000)
 VITE_SNOW_Z_INDEX=0
 
+# Particle Configuration (Colorful floating orbs)
+VITE_PARTICLE_COUNT=15          # จำนวนลูกไฟที่ลอยขึ้น
+VITE_PARTICLE_MIN_SIZE=1        # ขนาดเล็กที่สุด (px)
+VITE_PARTICLE_MAX_SIZE=8       # ขนาดใหญ่ที่สุด (px)
+VITE_PARTICLE_MIN_DURATION=15    # ความเร็วสูงสุด (วินาที - ค่าน้อย = เร็ว)
+VITE_PARTICLE_MAX_DURATION=40   # ความเร็วต่ำสุด (วินาที - ค่ามาก = ช้า)
+VITE_PARTICLE_OPACITY=0.7       # ความทึบ (0-1)
 
 
 #  cd /path/to/PCRU-CHATBOT-FRONTEND-1
