feat: Update API base URL and adjust preconnect links for backend, ensuring proper local development setup

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # URL สำหรับเชื่อมต่อกับ Backend (Node.js)
 # Production: Use Vercel deployment
 # VITE_API_BASE_URL=https://pcru-chatbot-backend-tau.vercel.app
-#VITE_API_BASE_URL=http://project.3bbddns.com:36145
-VITE_API_BASE_URL=https://recovery-retrieve-rpg-tutorials.trycloudflare.com   
+VITE_API_BASE_URL=http://localhost:36145
+# VITE_API_BASE_URL=https://recovery-retrieve-rpg-tutorials.trycloudflare.com   
 # Dev server host/port for Vite
 VITE_DEV_HOST=0.0.0.0
 VITE_DEV_PORT=36144
