--- a/.env
+++ b/.env
@@ -57,3 +57,6 @@ VITE_PARTICLE_OPACITY=0.7       # ความทึบ (0-1)
 
 # npm install --save-dev concurrently
 # npx concurrently "cd /path/to/PCRU-CHATBOT-FRONTEND-1 && npm run dev" "cd /path/to/pcru-chatbot-backend-1 && npm run dev"
+
+# Privacy contact email used in the Privacy page (set to your institutional address)
+VITE_PRIVACY_EMAIL=st651102064101@pcru.ac.th
