--- a/.env
+++ b/.env
@@ -5,6 +5,9 @@ VITE_API_BASE_URL=https://tours-fair-remix-split.trycloudflare.com
 VITE_DEV_HOST=0.0.0.0
 VITE_DEV_PORT=36144
 
+# Public URL fallback used by the frontend when the local app fails to start (e.g., mobile Safari)
+VITE_PUBLIC_URL=https://retrieval-distribution-intermediate-producers.trycloudflare.com/
+
 # App Version
 VITE_APP_VERSION=v1.0
 
@@ -60,3 +63,5 @@ VITE_PARTICLE_OPACITY=0.7       # ความทึบ (0-1)
 
 # Privacy contact email used in the Privacy page (set to your institutional address)
 VITE_PRIVACY_EMAIL=st651102064101@pcru.ac.th
+
+
