feat: Implement auto-resizing input field in chatbot for better user interaction

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ VITE_DEV_PORT=36144
 
 # Public URL fallback used by the frontend when the local app fails to start (e.g., mobile Safari)
 VITE_PUBLIC_URL=https://kernel-camcorders-each-reply.trycloudflare.com/
-
+<textarea data-v-ae0b4465="" class="input-pill real-input" placeholder="ขอความช่วยเหลืองจาก ปลายฟ้า" autocomplete="off" rows="1"></textarea>
 # App Version
 VITE_APP_VERSION=v1.0
 
