--- a/.env
+++ b/.env
@@ -1,12 +1,14 @@
 # URL สำหรับเชื่อมต่อกับ Backend (Node.js)
 # Production: Use Vercel deployment
-VITE_API_BASE_URL=https://visits-portrait-timing-chair.trycloudflare.com 
+# VITE_API_BASE_URL=https://visits-portrait-timing-chair.trycloudflare.com 
+VITE_API_BASE_URL=http://project.3bbddns.com:36145
+
 # Dev server host/port for Vite
 VITE_DEV_HOST=0.0.0.0
 VITE_DEV_PORT=36144
 
 # Public URL fallback used by the frontend when the local app fails to start (e.g., mobile Safari)
-VITE_PUBLIC_URL=https://kernel-camcorders-each-reply.trycloudflare.com/
+VITE_PUBLIC_URL=http://project.3bbddns.com:36144
 <textarea data-v-ae0b4465="" class="input-pill real-input" placeholder="ขอความช่วยเหลือจาก ปลายฟ้า" autocomplete="off" rows="1"></textarea>
 # App Version
 VITE_APP_VERSION=v1.0
